--- a/styles.css
+++ b/styles.css
@@ -1,2 +1,44 @@
 
 /* Your CSS Code here. */
+body,html{
+    height: 100%;
+    width: 100%;
+}
+.container{
+background-color: rgb(245, 166, 192);
+border: 5px solid lightgreen;
+height: 100%;
+}
+.container .col-4{
+    /* border: 3px solid green; */
+    height: 33%;
+    width: 33%;
+}
+.col-6{
+    /* border: 3px solid green; */
+    height: 33%;
+    width: 33%;
+}
+.col-8{
+    /* border: 3px solid green; */
+    height: 33%;
+    width: 66%;
+}
+#one{
+    background: lightblue;
+}
+#two{
+    background:lightpink;
+}
+#three{
+    background:lightcoral;
+}
+#four{
+    background: lightseagreen;
+}
+#five{
+    background:pink;
+}
+#six{
+    background: green;
+}
